<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white"
    tools:context="pithynews.pithy.User">

    <ImageButton
        android:id="@+id/imageButton_emergency3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="80dp"
        android:maxHeight="100dp"
        android:scaleType="fitCenter"
        android:layout_marginLeft="270dp"
        android:layout_marginTop="350dp"
        android:src="@drawable/emergency3"
        android:background="@null"
        android:layout_marginStart="270dp"
        android:contentDescription="@string/todo13" />

    <ImageButton
        android:id="@+id/imageButton_feedback1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="125dp"
        android:maxHeight="100dp"
        android:scaleType="fitCenter"
        android:layout_marginLeft="265dp"
        android:layout_marginTop="445dp"
        android:src="@drawable/feedback1"
        android:background="@null"
        android:layout_marginStart="265dp"
        android:contentDescription="@string/todo12" />

    <ImageButton
        android:id="@+id/imageButton_aboutus1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="125dp"
        android:maxHeight="500dp"
        android:scaleType="fitCenter"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="455dp"
        android:src="@drawable/aboutus1"
        android:background="@null"
        android:layout_marginStart="125dp"
        android:contentDescription="@string/todo11" />

    <ImageButton
        android:id="@+id/imageButton_campusmap1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="125dp"
        android:maxHeight="80dp"
        android:scaleType="fitCenter"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="455dp"
        android:src="@drawable/campusmap1"
        android:background="@null"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/todo10" />
    <ImageButton
        android:id="@+id/imageButton_adminstrators"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="100dp"
        android:maxHeight="500dp"
        android:scaleType="fitCenter"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="350dp"
        android:src="@drawable/adminstrators"
        android:background="@null"
        android:layout_marginStart="140dp"
        android:contentDescription="@string/todo9" />

    <ImageButton
        android:id="@+id/imageButton_fnr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="350dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/fee_and_registration"
        android:maxHeight="200dp"
        android:maxWidth="75dp"
        android:scaleType="fitCenter"
        android:src="@drawable/fnr"

        android:layout_marginStart="25dp" />

    <ImageButton
        android:id="@+id/imageButton_clubs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="265dp"
        android:layout_marginTop="220dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:maxHeight="500dp"
        android:maxWidth="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/clubs"
        android:layout_marginStart="265dp"
        android:contentDescription="@string/todo8" />

    <ImageButton
        android:id="@+id/imageButton_studdata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="135dp"
        android:layout_marginTop="220dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:maxHeight="500dp"
        android:maxWidth="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/studdata"
        android:layout_marginStart="135dp"
        android:contentDescription="@string/todo7" />

    <ImageButton
        android:id="@+id/imageButton_bus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="220dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:maxHeight="500dp"
        android:maxWidth="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/bus"
        android:layout_marginStart="15dp"
        android:contentDescription="@string/todo6" />

    <ImageButton
        android:id="@+id/imageButton_mess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="265dp"
        android:layout_marginTop="100dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:maxHeight="500dp"
        android:maxWidth="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/mess"
        android:layout_marginStart="265dp"
        android:contentDescription="@string/todo5" />

    <ImageButton
        android:id="@+id/imageButton_faculty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="135dp"
        android:layout_marginTop="100dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:maxHeight="500dp"
        android:maxWidth="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/faculty"
        android:layout_marginStart="135dp"
        android:contentDescription="@string/todo4" />

    <ImageButton
        android:id="@+id/imageButton_academics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="100dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:maxHeight="500dp"
        android:maxWidth="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/academics"
        android:layout_marginStart="15dp"
        android:contentDescription="@string/todo3" />

    <ImageButton
        android:id="@+id/imageButton_newsletter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="265dp"
        android:layout_marginTop="0dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:maxHeight="500dp"
        android:maxWidth="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/news"
        android:layout_marginStart="265dp"
        android:contentDescription="@string/todo" />

    <ImageButton
        android:id="@+id/imageButton_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="135dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:maxHeight="500dp"
        android:maxWidth="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/events"
        android:layout_marginStart="135dp"
        android:contentDescription="@string/todo1" />

    <ImageButton
        android:id="@+id/imageButton_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="0dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:maxHeight="500dp"
        android:maxWidth="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/today"
        android:layout_marginStart="15dp"
        android:contentDescription="@string/todo2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignEnd="@+id/imageButton_emergency3"
        android:layout_alignRight="@+id/imageButton_emergency3"
        android:text="@string/textview5"
        android:textColor="@color/colorPrimaryDark"
        android:visibility="visible"
        tools:text="   Emergency  " />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignEnd="@+id/imageButton_adminstrators"
        android:layout_alignRight="@+id/imageButton_adminstrators"
        android:text="@string/administrators"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButton_bus"
        android:layout_alignStart="@+id/imageButton_bus"
        android:layout_below="@+id/imageButton_fnr"
        android:text="@string/textview4"
        android:textColor="@color/colorPrimaryDark"
        tools:text=" Fees and\n Registration" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/imageButton_campusmap1"
        android:text="@string/textview3"
        tools:text=" Campus Map"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButton_adminstrators"
        android:layout_alignStart="@+id/imageButton_adminstrators"
        android:layout_below="@+id/imageButton_campusmap1"
        android:text="@string/textview2"
        tools:text="      About Us"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButton_feedback1"
        android:layout_alignStart="@+id/imageButton_feedback1"
        android:layout_alignTop="@+id/textView5"
        android:text="@string/textview1"
        tools:text="     Feedback"
        android:textColor="@color/colorPrimaryDark"/>
</RelativeLayout>